# saas-builder-agent

./: DEV_PHASES.md  PHASE_EXECUTION_PLAN.md  PRD.md  PROJECT_STATUS.md  README.md  TRD.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
core/discovery/: models.py  parser.py  questionnaire.py  service.py
core/execution/: engine.py
core/orchestrator/: approval.py  state_machine.py  workflow.py
core/progress/: tracker.py
core/specs/: generator.py  review.py
storage/: tasks.json
tests/: test_build_phase_engine.py  test_discovery.py  test_discovery_service.py  test_phase_gate.py  test_spec_generation.py  test_state_store.py  test_task_tracker.py  test_workflow_controller.py
ui/desktop/: app.py  phase_gate.py
