[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgeflow-agent-studio"
version = "0.1.0"
description = "Desktop-native multi-agent orchestration foundation"
requires-python = ">=3.11"
dependencies = [
  "pyside6>=6.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

